2006-08-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	* longlines.el (longlines-show-region): Make it work on read-only
	buffers as well.

2006-08-01  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-set-hollow): Check for gud-last-last-frame.

2006-07-31  Richard Stallman  <rms@gnu.org>

	* progmodes/vhdl-mode.el (vhdl-speedbar-display-directory)
	(vhdl-speedbar-display-projects): Update old obsolete
	speedbar variable names.

2006-07-31  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-find-source-frame): New option.
	(gdb-stopped): Use it.

	* t-mouse.el (t-mouse-mode): Use set-process-query-on-exit-flag.

2006-07-29  Chong Yidong  <cyd@stupidchicken.com>

	* loadhist.el (unload-feature): Handle new `(t . SYMBOL)' format
	for load-history elements.

2006-07-29  Eli Zaretskii  <eliz@gnu.org>

	* files.el (convert-standard-filename): For Cygwin, replace
	characters not allowed in Windows file names.
	(make-auto-save-file-name): Add Cygwin to the list of systems
	where the auto-save file name needs to be run through
	convert-standard-filename.

2006-07-29  Lennart Borgman  <lennart.borgman.073@student.lu.se>

	* window.el (bw-get-tree): Don't integerp subtree if it's nil.

2006-07-28  Richard Stallman  <rms@gnu.org>

	* bindings.el (mode-line-frame-identification)
	(propertized-buffer-identification): Centralize the code
	to initialize the variable.

	* progmodes/grep.el (grep-default-command): Catch errors from
	wildcard-to-regexp.

2006-07-29  Kim F. Storm  <storm@cua.dk>

	* progmodes/grep.el (grep-tag-default): New function.
	(grep-default-command, grep-read-regexp): Use it.
	(grep-read-files): Use car of grep-files-history or grep-files-aliases
	as default if nothing else applies.

2006-07-28  Bill Atkins  <atkinw@rpi.edu>  (tiny change)

	* wdired.el (wdired-change-to-wdired-mode, wdired-change-to-dired-mode):
	Throw error if buffer is not in Dired and Wdired mode, respectively.
